site.css
body,
div,
h1,
h2,
h3,
h4,
h5,
p {
  margin: 0;
  padding: 0;
}

:root {
  font-family: Arial, Helvetica, sans-serif;
  --dark1: black;
  --light1: white;
  --dark2: darkblue;
  --light2: lightblue;
  background-color: var(--light1);
  color: var(--dark1);
}

button {
  background-color: var(--light2);
  color: var(--dark2);
  font-weight: bold;
  padding: 10px;
  border-radius: 5px;
  border: 1px solid var(--dark2);
}

input {
  display: block;
  width: 95%;
  font-weight: bold;
  font-size: 1.1em;
  line-height: 1.5em;
  border: none;
  border-bottom: 2px solid var(--dark2);
  outline: none;
  margin: 5px;
}

label {
  font-weight: bold;
  font-size: 1.1em;
}

.small {
  font-size: small;
  font-weight: normal;
}

/* People */
#people {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
  padding: 0;
}

#people div {
  padding: 10px;
  margin: 10px;
  border: 1px solid var(--dark2);
  border-radius: 5px;
  color: var(--dark2);
  background-color: var(--light2);
  font-weight: bold;
}
#planetsList {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
  padding: 0;
}

#planetsList div {
  padding: 10px;
  margin: 10px;
  border: 1px solid var(--dark2);
  border-radius: 5px;
  color: var(--dark2);
  background-color: var(--light2);
  font-weight: bold;
}

/* Films */
#films {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
  padding: 0;
}

#films div {
  padding: 10px;
  margin: 10px;
  border: 1px solid var(--dark2);
  border-radius: 5px;
  color: var(--dark2);
  background-color: var(--light2);
  font-weight: bold;
}

/* Person page */
h1#name {
  margin: 50px;
}

#generalInfo {
  display: flex;
  justify-content: space-around;
  border: 20px;
}

#generalInfo p {
  padding: 20px;
  margin: 10px;
  color: var(--dark2);
  background-color: var(--light2);
}

#generalInfo span {
  font-weight: bold;
  font-size: 1.1em;
}

section#planets,
section#people,
section#residents,
section#films {
  margin: 50px;
}

section#planets ul,
section#residents ul,
section#people ul,
section#films ul {
  list-style-type: none;
  padding: 0;
}

section#planets a,
section#residents a,
section#people a,
section#films a {
  display: inline-block;
  text-decoration: none;
  font-size: 1.1em;

  background-color: var(--light2);
  color: var(--dark2);
  font-weight: bold;
  padding: 10px;
  margin: 10px;
  border-radius: 5px;
  border: 1px solid var(--dark2);
}

/* Film page */
h1#title {
  margin: 50px;
}

section#planets,
section#characters{
  margin: 50px;
}

section#planets ul,
section#characters ul {
  list-style-type: none;
  padding: 0;
}

section#planets a,
section#charcters a {
  display: inline-block;
  text-decoration: none;
  font-size: 1.1em;

  background-color: var(--light2);
  color: var(--dark2);
  font-weight: bold;
  padding: 10px;
  margin: 10px;
  border-radius: 5px;
  border: 1px solid var(--dark2);
}

